# FinHQ

./: DETAILED_PROJECT_DOCUMENTATION.md  FINTECH_MASTER_PROMPT.md  FIXES.md  README.md  RUN_INSTRUCTIONS.md  SECURITY.md  bloomberg_permission.txt  check_db.py  docker-compose.yml  finaldayoverview.html  fix_currency.py  fix_templates.py  generate_finaldayoverview.py  generate_fintechhq_documents.py  projectdiscription.md  replace_india.py  test_order_flow.py  test_trade.py
backend/: Dockerfile  create_admin.py  create_tables.py  initial_data.py  pyproject.toml  quick_check.py  verify_backend.py
backend/alembic/: env.py
backend/alembic/versions/: 4d3a2f676b67_add_security_columns.py  843cf9f567b7_initial_schema.py  a9864908015f_standardize_table_names.py  f6e54802289a_missing.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  indian_stocks.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  alert.py  education.py  ml.py  news.py  order.py  password_history.py  portfolio.py  session.py  social.py  stock.py  strategy.py  user.py  watchlist.py
backend/app/schemas/: __init__.py  alert.py  education.py  news.py  order.py  social.py  stock.py  strategy.py  user.py
backend/app/services/: alert_service.py  broker_service.py  education_service.py  social_service.py  stock_data_service.py
backend/app/websockets/: __init__.py  manager.py  router.py
ml-service/: Dockerfile  pyproject.toml
ml-service/app/: main.py
ml-service/app/core/: mlflow_client.py
ml-service/app/models/: lstm.py
ml-service/app/services/: backtest_service.py  chart_renderer.py  feature_service.py  fundamental_service.py  pattern_detection_service.py  pattern_history_store.py  prediction_service.py  recommendation_service.py  risk_service.py  (+2 more)
ml-service/training/: README.md  dataset_generator.py  ensemble_inference.py  train_cnn_transformer.py  train_yolo.py
(+94 files in other folders)
