[tool.poetry]
name = "fintech-backend"
version = "0.1.0"
description = "AI-Powered Investment Platform Backend"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.26.0"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
slowapi = "^0.1.9"
pyotp = "^2.9.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
yfinance = "^0.2.40"
ta = "^0.11.0"
argon2-cffi = "^23.1.0"
zxcvbn = "^4.4.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
