[tool.poetry]
name = "fintech-ml-service"
version = "0.1.0"
description = "AI-Powered Investment Platform ML Engines"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
torch = "2.5.1" 
transformers = "4.46.3"
ta = "^0.11.0"
mlflow = "^2.10.2"
opencv-python-headless = "^4.9.0"
mplfinance = "^0.12.10b0"
pillow = "^10.2.0"
scipy = "^1.12.0"
# torch and transformers are large, might need to be careful with install times, but necessary for the plan.


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
